# spdx_license_checker

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
scripts/hooks/: spdx_license_checker.py
